# gcpp

./: .clang-format  CMakeLists.txt  HelpInstall.cmake  LICENSE  README.md
src/acme/: Color.h  Containers.h  Formatter.cpp  Formatter.h  StringUtils.cpp  StringUtils.h  Time.cpp  Time.h  beautify.cpp  beautify.h  pimpl.h  type_name.h  where.hpp
src/acme/guard/: CallOnEnd.h  ChangeOnEnd.h
src/acme/input/: SecretCin.cpp  SecretCin.h
src/acme/random/: MersenneTwister.cpp  MersenneTwister.h
src/data/: Sack.cpp  Sack.h
src/exception/: Fail.cpp  Fail.h  fail.cpp  fail.hpp
src/gcpp/: color.hpp  pimpl.h  time.cpp  time.hpp  type_name.h  where.hpp
src/gcpp/container/: Sack.h  acme.h
src/gcpp/exception/: fail.cpp  fail.hpp
src/gcpp/guard/: CallOnEnd.h  ChangeOnEnd.h
src/gcpp/i18n/: i18n-boost.cpp  i18n.h
src/gcpp/input/: SecretCin.cpp  SecretCin.h
src/gcpp/math/: Bezier.h  Percent.cpp  Percent.h  Point.h  traits.h
src/gcpp/meta/: get_arg.hpp
src/gcpp/nice/: number.cpp  number.hpp  time.cpp  time.hpp  to_string.hpp
src/gcpp/random/: MersenneTwister.cpp  MersenneTwister.h
src/gcpp/stream/: StreamScopeFormat.hpp
src/gcpp/string/: ConstexprString.hpp  acme.cpp  acme.hpp  from_string.cpp  from_string.hpp  to_string.cpp  to_string.hpp
src/gcpp/wrapper/lib/poco/: MessageStream.cpp  MessageStream.hpp  PocoRequest.cpp  PocoRequest.h
src/geometry/: Point.cpp  Point.h
src/i18n/: i18n-boost.cpp  i18n.h
src/math/: Bezier.cpp  Bezier.h  Percent.cpp  Percent.h  traits.h
src/string/: ConstexprString.hpp
src/wrapper/lib/poco/: MessageStream.cpp  MessageStream.hpp  PocoRequest.cpp  PocoRequest.h
test/: CMakeLists.txt
test/gtest/: MersenneTwisterTest.cpp
test/src/acme/: where_test.cpp
test/src/data/: SackTest.cpp
test/unit-catch2/: CMakeLists.txt
test/unit-catch2/src/: SuiteFromString.cpp  SuiteNiceTime.cpp  SuitePercent.cpp  SuiteSack.cpp  SuiteToString.cpp  SuiteWhere.cpp  main.cpp
test/unit-gtest/src/: SuiteMersenneTwister.cpp
